# arxiv-summarizer

./: .gitignore  README.md  pyproject.toml
arxiv_summarizer/: main.py
arxiv_summarizer/agent/: context.py  harness.py  prompt.py  router.py  session.py  subagent.py
arxiv_summarizer/eval/: evaluator.py
arxiv_summarizer/model/: ollama_client.py
arxiv_summarizer/parsing/: html_parser.py  pdf_parser.py  section_splitter.py
arxiv_summarizer/storage/: markdown_store.py
arxiv_summarizer/tools/: arxiv_fetch.py  arxiv_search.py  delegate.py  registry.py  sandbox.py  summaries.py  web_search.py
