[project]
name = "arxiv-summarizer"
version = "0.1.0"
description = "Local agent harness for summarizing arxiv papers using Ollama"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.7",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20"]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
arxiv-summarizer = "arxiv_summarizer.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
